grammar.js
    source_file: $ => seq(
      optional($.shebang),
      repeat($.file_annotation),
      optional($.package_header),
      repeat($.import),
      repeat(seq($.statement, $._semi)),
    ),

    class_declaration: $ => prec.right(seq(
      optional($.modifiers),
      choice('class', seq(optional('fun'), 'interface')),
      field('name', $.identifier),
      optional($.type_parameters),
      optional($.primary_constructor),
      optional(seq(':', $.delegation_specifiers)),
      optional($.type_constraints),
      optional(choice($.class_body, $.enum_class_body)),
    )),

    property_declaration: $ => prec.right(seq(
      optional($.modifiers),
      choice('val', 'var'),
      optional($.type_parameters),
      optional(seq($._receiver_type, optional('.'))),
      choice($.variable_declaration, $.multi_variable_declaration),
      optional($.type_constraints),
      optional(choice(
        seq('=', $.expression),
        $.property_delegate,
      )),
      optional(';'),
      optional(choice(
        seq($.getter, optional($.setter)),
        seq($.setter, optional($.getter)),
      )),
    )),

    secondary_constructor: $ => seq(
      optional($.modifiers),
      'constructor',
      $.function_value_parameters,
      optional(seq(':', $.constructor_delegation_call)),
      optional($.block),
    ),

    constructor_delegation_call: $ => seq(choice('this', 'super'), $.value_arguments),

    primary_constructor: $ => seq(
      optional(seq(
        optional($.modifiers),
        'constructor',
      )),
      $.class_parameters,
    ),

    class_parameters: $ => seq(
      '(',
      optionalCommaSep1($.class_parameter),
      ')',
    ),

    class_parameter: $ => seq(
      optional($.modifiers),
      optional(choice('val', 'var')),
      $._identifier,
      ':', $.type,
      optional(seq('=', $.expression)),
    ),

    function_declaration: $ => prec.right(1, seq(
      optional($.modifiers),
      'fun',
      optional($.type_parameters),
      optional(seq($._receiver_type, optional('.'))),
      field('name', $._identifier),
      $.function_value_parameters,
      optional(seq(':', $.type)),
      optional($.type_constraints),
      optional($.function_body),
    )),

    function_value_parameters: $ => seq(
      '(',
      optionalCommaSep1(seq(
        optional($.parameter_modifiers),
        $.parameter,
        optional(seq('=', $.expression)),
      )),
      ')',
    ),

    variable_declaration: $ => prec(1, seq(
      repeat($.annotation),
      $._identifier,
      optional(seq(':', $.type)),
    )),

    getter: $ => prec.right(seq(
      optional($.modifiers),
      'get',
      optional(seq(
        '(',
        ')',
        optional(seq(':', $.type)),
        $.function_body,
      )),
    )),

    setter: $ => prec.right(seq(
      optional($.modifiers),
      'set',
      optional(seq(
        '(',
        optional($.parameter_modifiers),
        $.identifier,
        optional(seq(':', $.type)),
        optional(seq('=', $.expression)),
        ')',
        optional(seq(':', $.type)),
        $.function_body,
      )),
    )),

    function_body: $ => choice(
      $.block,
      seq('=', $.expression),
    ),

    block: $ => seq(
      '{',
      optional($._statements),
      '}',
    ),

    class_body: $ => seq(
      '{',
      repeat(seq($.class_member_declaration, $._class_member_semi)),
      '}',
    ),

    value_arguments: $ => seq(
      '(',
      optionalCommaSep1($.value_argument),
      ')',
    ),

    value_argument: $ => seq(
      optional(seq($._identifier, '=')),
      optional('*'),
      $.expression,
    ),

    _statements: $ => seq(
      $.statement,
      repeat(seq($._semi, $.statement)),
      optional($._semi),
    ),

    modifiers: $ => prec.right(repeat1(choice(
      $.annotation,
      $.class_modifier,
      $.member_modifier,
      $.function_modifier,
      $.property_modifier,
      $.visibility_modifier,
      $.inheritance_modifier,
      $.parameter_modifier,
      $.platform_modifier,
    ))),

    visibility_modifier: _ => choice(
      'public',
      'private',
      'protected',
      'internal',
    ),

    annotation: $ => choice(
      seq(
        '@',
        optional($.use_site_target),
        $._unescaped_annotation,
      ),
      seq(
        '@',
        optional($.use_site_target),
        '[',
        repeat1($._unescaped_annotation),
        ']',
      ),
    ),

    _unescaped_annotation: $ => choice(
      $.constructor_invocation,
      $.type,
    ),

    user_type: $ => seq(
      optional($.type_modifiers),
      sep1(
        $._simple_user_type,
        '.',
      ),
    ),

    _simple_user_type: $ => prec.right(seq($._identifier, optional($.type_arguments))),

    _receiver_type: $ => seq(
      optional($.type_modifiers),
      choice(
        $.user_type,
        'dynamic',
        $.parenthesized_type,
        $.nullable_type,
      ),
    ),

    assignment: $ => seq(
      field('left', $.expression),
      field('operator', choice(
        '=',
        '+=',
        '-=',
        '*=',
        '/=',
        '%=',
      )),
      field('right', $.expression),
    ),

    unary_expression: $ => prec.left(PREC.UNARY, choice(
      seq(
        field('operator', choice('++', '--', '+', '-', '!')),
        field('argument', $.expression),
      ),
      seq(
        field('argument', $.expression),
        field('operator', choice('++', '--', '!!')),
      ),
    )),

    call_expression: $ => prec.left(PREC.CALL, seq(
      $.expression,
      optional($.type_arguments),
      choice(
        $.value_arguments,
        seq(optional($.value_arguments), $.annotated_lambda),
      ),
    )),

    index_expression: $ => prec(PREC.CALL, seq(
      $.expression,
      '[',
      commaSep($.expression),
      ']',
    )),

    if_expression: $ => prec.right(seq(
      'if',
      '(',
      field('condition', $.expression),
      ')',
      choice(
        $.block,
        $.expression,
        $.assignment,
        ';',
        seq(
          optional(choice(
            $.block,
            $.expression,
            $.assignment,
          )),
          optional(';'),
          'else',
          choice(
            $.block,
            $.expression,
            $.assignment,
            ';',
          ),
        ),
      ),
    )),

    navigation_expression: $ => prec(PREC.CALL, seq(
      $.expression,
      choice('.', alias($._q_dot, '?.'), '::'),
      $.identifier,
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        alias(choice(
          token.immediate(prec(2, seq('\\', /[^bnrt'\"\\\$]/))),
          token.immediate(prec(1, /[^"\\\$]+/)),
          '$',
        ),
        $.string_content,
        ),
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    number_literal: _ => {
      const separator = '_';
      const decimal = /[0-9]+/;
      const hex = /[0-9a-fA-F]/;
      const bin = /[01]/;
      const decimalDigits = seq(repeat1(decimal), repeat(seq(separator, repeat1(decimal))));
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const binDigits = seq(repeat1(bin), repeat(seq(separator, repeat1(bin))));

      return token(seq(
        choice(
          decimalDigits,
          seq(/0[xX]/, hexDigits),
          seq(/0[bB]/, binDigits),
        ),
        optional(/([lL]|[uU][lL]?)/),
      ));
    },

    _identifier: $ => choice($.identifier, $._reserved_identifier),

    identifier: _ => token(choice(
      /[\p{L}_][\p{L}_\p{Nd}]*/u,
      /`[^\r\n`]+`/,
    )),

    line_comment: _ => token(seq('//', /.*/)),
  },
});

/**
 * Creates a rule to match one or more of the rules separated by `separator`
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by `separator`
 * and optionally ending with `separator`
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {ChoiceRule}
 */
function optionalSep1(rule, separator) {
  return optional(seq(rule, repeat(seq(separator, rule)), optional(separator)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 * and optionally ending with a comma
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function optionalCommaSep1(rule) {
  return optional(seq(rule, repeat(seq(',', rule)), optional(',')));
}
